fixing alignment, spacing issues around teaching page heading, tabs.

--- a/myuw/static/css/course_card.less
+++ b/myuw/static/css/course_card.less
@@ -2,9 +2,6 @@
 @import (reference) "typography.less";
 
 
-.instructor-term-cards {
-    padding-top: 16px;
-}
 
 /* Course Card Text */
 .myuw-course-abbrtitle {
