--- a/myuw/static/css/dropmenus.less
+++ b/myuw/static/css/dropmenus.less
@@ -12,7 +12,7 @@
         content: "\f078";
         position: absolute;
         right: 4px;
-        top: .7em;
+        top: .2em;
         font-size: 12px;
     }
 
@@ -24,10 +24,11 @@
 
         color: #555;
         font-size: 18px;
+        line-height: 1.1;
         border: none;
         background-color: transparent;
         border-radius: 0;
-        padding: 4px 22px 4px 8px;
+        padding: 0px 22px 4px 8px;
 
         &:hover { cursor: pointer; }
     }
