--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -310,14 +310,6 @@ body {
 .my-text-muted { color: #666; }
 
 
-/*** Headings ***/
-.heading-page {
-    font-family: 'encode_sans_normalbold', sans-serif;
-    font-weight: 600;
-    color: #444;
-    font-size: @font-header-larger;
-    margin-top: 1.5em;
-}
 
 
 /*** uw alert ***/
@@ -1419,6 +1411,9 @@ label { font-weight: normal; }
 
     #teaching_content {
 
+        .instructor-term-selection {
+            margin: 16px 0;
+        }
         .instructor-term-tabs {
             display: inline-block;
         }
