--- a/myuw/static/css/tabs.less
+++ b/myuw/static/css/tabs.less
@@ -8,9 +8,9 @@
         color: #555;
         text-decoration: none;
         font-size: 18px;
-        display: inline-block;
+        line-height: 1.1;
         margin-right: 8px;
-        padding: 4px 8px;
+        padding: 0px 8px 4px 8px;
     }
 
     .myuw-tab-label:hover {
