--- a/myuw/static/css/typography.less
+++ b/myuw/static/css/typography.less
@@ -8,6 +8,25 @@
 @fontsize-small: 12px;
 @fontsize-base: 14px;
 
+@font-header-larger: 26px;
+@font-header-large: 22px;
+@font-header-medium: 20px;
+@font-header-small: 18px;
+@font-header-smaller: 16px;
+@font-header-smallest: 14px;
+
+
+/*** Headings ***/
+.heading-page, .myuw-heading-page {
+    font-family: 'encode_sans_normalbold', sans-serif;
+    font-weight: 600;
+    color: #444;
+    font-size: @font-header-larger;
+    margin: 0 0 8px 0;
+
+}
+
+
 #app_content .card .myuw-card-title {
     margin-top: 0;
 }
